--- a/euajudo/Base.lproj/Main.storyboard
+++ b/euajudo/Base.lproj/Main.storyboard
@@ -22,6 +22,11 @@
             <string>Lato-Regular</string>
             <string>Lato-Regular</string>
             <string>Lato-Regular</string>
+            <string>Lato-Regular</string>
+            <string>Lato-Regular</string>
+            <string>Lato-Regular</string>
+            <string>Lato-Regular</string>
+            <string>Lato-Regular</string>
         </mutableArray>
         <mutableArray key="Lato-Semibold.ttf">
             <string>Lato-Semibold</string>
@@ -522,7 +527,7 @@
             </objects>
             <point key="canvasLocation" x="1084" y="1565"/>
         </scene>
-        <!--View Controller-->
+        <!--Dados do Cartão-->
         <scene sceneID="Nmp-HC-vh0">
             <objects>
                 <viewController automaticallyAdjustsScrollViewInsets="NO" id="CQd-I0-Jvv" sceneMemberID="viewController">
@@ -538,11 +543,85 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="are-pK-vY5" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="349"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="330"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4cR-80-NbD">
+                                                <rect key="frame" x="150" y="20" width="300" height="255"/>
+                                                <subviews>
+                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Titular" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fDs-kb-eKJ">
+                                                        <rect key="frame" x="8" y="8" width="284" height="30"/>
+                                                        <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
+                                                        <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                                                    </textField>
+                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Número" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GlQ-0j-S1Q">
+                                                        <rect key="frame" x="8" y="62" width="284" height="30"/>
+                                                        <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                                    </textField>
+                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="DD/MM" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hoT-3Y-NJi">
+                                                        <rect key="frame" x="8" y="119" width="133" height="30"/>
+                                                        <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Cód. de Segurança" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IoE-fY-qHt">
+                                                        <rect key="frame" x="149" y="119" width="143" height="30"/>
+                                                        <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                                    </textField>
+                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QeZ-7P-Lvm">
+                                                        <rect key="frame" x="4" y="191" width="292" height="54"/>
+                                                        <color key="backgroundColor" red="0.0" green="0.69803921568627447" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
+                                                        <state key="normal" title="EFETUAR PAGAMENTO">
+                                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                        </state>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                                <integer key="value" value="5"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                        </userDefinedRuntimeAttributes>
+                                                    </button>
+                                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6F2-nc-4Iv">
+                                                        <rect key="frame" x="0.0" y="45" width="296" height="1"/>
+                                                        <color key="backgroundColor" red="0.96862745100000003" green="0.96078431369999995" blue="0.95294117649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jnp-YO-pzs">
+                                                        <rect key="frame" x="0.0" y="100" width="296" height="1"/>
+                                                        <color key="backgroundColor" red="0.96862745100000003" green="0.96078431369999995" blue="0.95294117649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mlV-sd-K1I">
+                                                        <rect key="frame" x="0.0" y="161" width="110" height="1"/>
+                                                        <color key="backgroundColor" red="0.96862745100000003" green="0.96078431369999995" blue="0.95294117649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7yk-1o-vbT">
+                                                        <rect key="frame" x="151" y="161" width="145" height="1"/>
+                                                        <color key="backgroundColor" red="0.96862745100000003" green="0.96078431369999995" blue="0.95294117649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </view>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="300" id="Kjn-zp-Lxx"/>
+                                                    <constraint firstAttribute="height" constant="255" id="LZG-8w-esv"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
+                                            <constraint firstAttribute="centerX" secondItem="4cR-80-NbD" secondAttribute="centerX" id="18t-WD-Ig2"/>
+                                            <constraint firstItem="4cR-80-NbD" firstAttribute="top" secondItem="are-pK-vY5" secondAttribute="top" constant="20" id="1S0-qs-q34"/>
+                                            <constraint firstAttribute="bottom" secondItem="4cR-80-NbD" secondAttribute="bottom" constant="55" id="R7V-FO-3e6"/>
                                             <constraint firstAttribute="height" constant="349" id="gOb-7J-4JQ"/>
                                         </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="gOb-7J-4JQ"/>
+                                            </mask>
+                                        </variation>
                                     </view>
                                 </subviews>
                                 <constraints>
@@ -561,6 +640,7 @@
                             <constraint firstAttribute="trailing" secondItem="lVh-Hi-GRc" secondAttribute="trailing" id="eKq-JA-wqW"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Dados do Cartão" id="WX2-ux-vaw"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JbB-ka-Cxi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
