--- a/euajudo/Base.lproj/Main.storyboard
+++ b/euajudo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ZHZ-a3-SPd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ZHZ-a3-SPd">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -85,26 +85,26 @@
                         <viewControllerLayoutGuide type="bottom" id="Cuu-56-Bft"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="HW6-1H-8lu">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="800"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dnf-IE-ohD">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="736"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fja-XK-Ouk" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="524"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fja-XK-Ouk" userLabel="Content View">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="581"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Título do projeto" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VHv-l6-cKD">
-                                                <rect key="frame" x="18" y="15" width="564" height="21"/>
+                                                <rect key="frame" x="18" y="12" width="564" height="29"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="hId-XY-MSr"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" name="Lato-Semibold" family="Lato" pointSize="16"/>
-                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" name="Lato-Semibold" family="Lato" pointSize="24"/>
+                                                <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Empresa responsável" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9eV-LI-DyD">
-                                                <rect key="frame" x="18" y="42" width="564" height="21"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Empresa responsável" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9eV-LI-DyD">
+                                                <rect key="frame" x="18" y="38" width="564" height="21"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="Se5-3I-vve"/>
                                                 </constraints>
@@ -112,35 +112,55 @@
                                                 <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Miyagi" translatesAutoresizingMaskIntoConstraints="NO" id="mWL-7Q-1as">
-                                                <rect key="frame" x="0.0" y="81" width="600" height="320"/>
+                                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Miyagi" translatesAutoresizingMaskIntoConstraints="NO" id="mWL-7Q-1as">
+                                                <rect key="frame" x="0.0" y="77" width="600" height="320"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="mWL-7Q-1as" secondAttribute="height" multiplier="15:8" id="P97-vb-ALA"/>
                                                 </constraints>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dKk-iJ-zif">
-                                                <rect key="frame" x="18" y="414" width="564" height="21"/>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UxL-t3-3Yh">
+                                                <rect key="frame" x="0.0" y="404" width="600" height="50"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="0Fu-e2-ghh"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d3R-ID-TAb">
+                                                <rect key="frame" x="15" y="459" width="570" height="1"/>
+                                                <color key="backgroundColor" red="0.96862745100000003" green="0.96078431369999995" blue="0.95294117649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="1" id="Zu5-LT-nG0"/>
+                                                </constraints>
+                                            </view>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dKk-iJ-zif">
+                                                <rect key="frame" x="18" y="475" width="564" height="21"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="Anp-kc-T4z"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
-                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="dKk-iJ-zif" secondAttribute="bottom" constant="89" id="8LN-Ie-p1V"/>
+                                            <constraint firstItem="d3R-ID-TAb" firstAttribute="leading" secondItem="fja-XK-Ouk" secondAttribute="leading" constant="15" id="7Ih-h6-GU7"/>
+                                            <constraint firstAttribute="bottom" secondItem="dKk-iJ-zif" secondAttribute="bottom" constant="85" id="8LN-Ie-p1V"/>
+                                            <constraint firstItem="d3R-ID-TAb" firstAttribute="top" secondItem="UxL-t3-3Yh" secondAttribute="bottom" constant="5" id="9Yq-Ni-YRg"/>
                                             <constraint firstItem="mWL-7Q-1as" firstAttribute="top" secondItem="9eV-LI-DyD" secondAttribute="bottom" constant="18" id="A5C-0S-hhC"/>
                                             <constraint firstAttribute="trailing" secondItem="mWL-7Q-1as" secondAttribute="trailing" id="Iv9-xK-Cue"/>
                                             <constraint firstAttribute="trailing" secondItem="9eV-LI-DyD" secondAttribute="trailing" constant="18" id="JsW-CH-Ist"/>
-                                            <constraint firstItem="dKk-iJ-zif" firstAttribute="top" secondItem="mWL-7Q-1as" secondAttribute="bottom" constant="13" id="K15-dJ-GP6"/>
+                                            <constraint firstItem="dKk-iJ-zif" firstAttribute="top" secondItem="mWL-7Q-1as" secondAttribute="bottom" constant="78" id="K15-dJ-GP6"/>
                                             <constraint firstAttribute="trailing" secondItem="dKk-iJ-zif" secondAttribute="trailing" constant="18" id="Mfu-BU-IxZ"/>
                                             <constraint firstItem="9eV-LI-DyD" firstAttribute="leading" secondItem="fja-XK-Ouk" secondAttribute="leading" constant="18" id="Pbb-Qs-1MK"/>
+                                            <constraint firstItem="UxL-t3-3Yh" firstAttribute="leading" secondItem="fja-XK-Ouk" secondAttribute="leading" id="Yoz-Fw-Ycj"/>
                                             <constraint firstItem="dKk-iJ-zif" firstAttribute="leading" secondItem="fja-XK-Ouk" secondAttribute="leading" constant="18" id="Zom-Oz-EXq"/>
-                                            <constraint firstItem="9eV-LI-DyD" firstAttribute="top" secondItem="VHv-l6-cKD" secondAttribute="bottom" id="cOP-J0-XvB"/>
-                                            <constraint firstItem="VHv-l6-cKD" firstAttribute="top" secondItem="fja-XK-Ouk" secondAttribute="top" constant="15" id="eRq-GV-XJD"/>
+                                            <constraint firstAttribute="trailing" secondItem="d3R-ID-TAb" secondAttribute="trailing" constant="15" id="b6u-Be-zkS"/>
+                                            <constraint firstItem="UxL-t3-3Yh" firstAttribute="top" secondItem="mWL-7Q-1as" secondAttribute="bottom" constant="7" id="c68-ns-M4Z"/>
+                                            <constraint firstItem="9eV-LI-DyD" firstAttribute="top" secondItem="VHv-l6-cKD" secondAttribute="bottom" constant="-3" id="cOP-J0-XvB"/>
+                                            <constraint firstItem="VHv-l6-cKD" firstAttribute="top" secondItem="fja-XK-Ouk" secondAttribute="top" constant="12" id="eRq-GV-XJD"/>
                                             <constraint firstItem="mWL-7Q-1as" firstAttribute="leading" secondItem="fja-XK-Ouk" secondAttribute="leading" id="knN-pn-P8J"/>
+                                            <constraint firstAttribute="trailing" secondItem="UxL-t3-3Yh" secondAttribute="trailing" id="lAi-bD-faj"/>
                                             <constraint firstItem="VHv-l6-cKD" firstAttribute="leading" secondItem="fja-XK-Ouk" secondAttribute="leading" constant="18" id="vZH-JN-zx3"/>
                                             <constraint firstAttribute="trailing" secondItem="VHv-l6-cKD" secondAttribute="trailing" constant="18" id="xg8-zw-r5s"/>
                                         </constraints>
@@ -150,7 +170,7 @@
                                     <constraint firstItem="fja-XK-Ouk" firstAttribute="width" secondItem="Dnf-IE-ohD" secondAttribute="width" id="RRr-dj-5YX"/>
                                     <constraint firstItem="fja-XK-Ouk" firstAttribute="leading" secondItem="Dnf-IE-ohD" secondAttribute="leading" id="bm5-oU-kEL"/>
                                     <constraint firstItem="fja-XK-Ouk" firstAttribute="top" secondItem="Dnf-IE-ohD" secondAttribute="top" id="qIO-bD-vf0"/>
-                                    <constraint firstAttribute="bottom" secondItem="fja-XK-Ouk" secondAttribute="bottom" constant="18" id="vJ4-rs-ZPa"/>
+                                    <constraint firstAttribute="bottom" secondItem="fja-XK-Ouk" secondAttribute="bottom" constant="162" id="vJ4-rs-ZPa"/>
                                     <constraint firstAttribute="trailing" secondItem="fja-XK-Ouk" secondAttribute="trailing" id="xhN-JO-6qm"/>
                                 </constraints>
                                 <inset key="scrollIndicatorInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="74"/>
@@ -171,6 +191,8 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="600" height="800"/>
                     <connections>
                         <outlet property="contentView" destination="fja-XK-Ouk" id="NjY-w7-YQY"/>
                         <outlet property="imageView" destination="mWL-7Q-1as" id="QMu-xL-10u"/>
@@ -178,6 +200,7 @@
                         <outlet property="labelReceiverName" destination="9eV-LI-DyD" id="n4T-hP-mAh"/>
                         <outlet property="labelTitle" destination="VHv-l6-cKD" id="YR3-2b-0FY"/>
                         <outlet property="scrollView" destination="Dnf-IE-ohD" id="AGA-VU-8cO"/>
+                        <outlet property="viewProgressView" destination="UxL-t3-3Yh" id="s59-Zz-B76"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oKC-lf-2lQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
